--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,40 @@
-/* font-family: 'Open Sans', sans-serif; */
+/* Calling Shared Styles */
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.color-primary {
+    color: #FD6E0A;
+}
+
+.btn-primary {
+    border-radius: 5px;
+    background: #FD6E0A;
+}
+
+/* Nav Section Style */
+nav {
+    display: flex;
+}
+
+.nav-title {
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+nav>ul {
+    display: flex;
+}
+
+nav li {
+    list-style: none;
+    margin-right: 50px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #474747;
+}
