--- a/styles/style.css
+++ b/styles/style.css
@@ -10,11 +10,18 @@ body {
 .btn-primary {
     border-radius: 5px;
     background: #FD6E0A;
+    border: 0;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+    padding: 18px 35px;
 }
 
 /* Nav Section Style */
 nav {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav-title {
@@ -27,6 +34,7 @@ nav {
 
 nav>ul {
     display: flex;
+    align-items: center;
 }
 
 nav li {
